Style: avoid label wrap on accept

--- a/src/afch.css
+++ b/src/afch.css
@@ -330,6 +330,7 @@ div.afch-code-wrapper > pre {
 	margin-top: 12px;
 	width: 15%;
 	text-align: left;
+	min-width: 150px;
 }
 
 .accept label + .accept input {
